# P5

./: .gitignore  2021-12-09-10-14-59.bag  2021-12-09-15-29-53.bag  README.md  testdata.txt  xml.xml
Tests/: CamTest1_Movement  CamTest1_NoMovement  Navigation No Obstacle  Screencast from 12-13-2021 01:55:35 PM.webm  Screencast from 12-13-2021 01:56:31 PM.webm  Screencast from 12-13-2021 01:57:26 PM.webm  Screencast from 12-13-2021 01:57:55 PM.webm  global.csv  global2.csv  local.csv  local2.csv  odom.csv  odom2.csv
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
old python scripts/: centerNdirection.py  test.py
old python scripts/pose_estimation/: f_FormationDetector.py
pose_estimation/: Construct_Ospaces.py  Distance_excluder.py  F-frotmation_detector.py  LinearRegression.py  LookingInOut.py  NEW_Distance_excluder.py  centerNdirection.py  check.txt  class_person.py  convexhull.py  convexhull_personSpace.py  f_FormationDetector.py  frustum_maker.py  generate_OspaceCombinations.py  insideORnot.py  ray_casting.py  test_distance.py  test_persons4.py
pose_estimation/frustum/: MultiFrameExample.m  readme.txt
ros_openpose/launch/: run.launch
ros_openpose/scripts/: LineDot.py  TestData.py  f_formation_ros.py  features.mat  persondata.py  test_fFormation copy.py  test_fFormation.py
ros_openpose_vini/: CMakeLists.txt  package.xml
ros_openpose_vini/msg/: BodyPoints.msg
src/pose_estimation/: LookingInOut.py  NEW_Distance_excluder.py  centerNdirection.py  generate_OspaceCombinations.py  (+1 more)
useless/: Construct_Ospaces.py  LookingInOut.py  ray_casting.py
(+259 files in other folders)
